--- a/pom.xml
+++ b/pom.xml
@@ -4,20 +4,21 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>net.craftcitizen</groupId>
   <artifactId>imagemaps</artifactId>
-  <version>1.0.11</version>
+  <version>1.1.0</version>
   <name>ImageMaps</name>
   <description>Render Images onto maps!</description>
 
-  <distributionManagement>
-    <repository>
-      <id>github</id>
-      <name>GitHub ImageMaps Packages</name>
-      <url>https://maven.pkg.github.com/SydMontague/ImageMaps</url>
-    </repository>
-  </distributionManagement>
+  <pluginRepositories>
+    <pluginRepository>
+      <id>bytecode.space</id>
+      <url>https://repo.bytecode.space/repository/maven-public/</url>
+    </pluginRepository>
+  </pluginRepositories>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.target>21</maven.compiler.target>
+    <maven.compiler.source>21</maven.compiler.source>
   </properties>
 
   <repositories>
@@ -26,29 +27,28 @@
       <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
     </repository>
     <repository>
-      <id>github</id>
-      <name>GitHub CLCore Packages</name>
-      <url>https://maven.pkg.github.com/SydMontague/CLCore</url>
+      <id>dmulloy2-repo</id>
+      <url>https://repo.dmulloy2.net/repository/public/</url>
     </repository>
   </repositories>
 
   <dependencies>
     <dependency>
-      <groupId>org.spigotmc</groupId>
-      <artifactId>spigot-api</artifactId>
-      <version>1.17.1-R0.1-SNAPSHOT</version>
-    </dependency>
-
+      <groupId>ca.bkaw</groupId>
+      <artifactId>paper-nms</artifactId>
+      <version>1.20.6-SNAPSHOT</version>
+      <scope>provided</scope>
+  </dependency>
     <dependency>
-      <groupId>de.craftlancer</groupId>
-      <artifactId>clcore</artifactId>
-      <version>0.4.0-SNAPSHOT</version>
-      <exclusions>
-        <exclusion>
-          <artifactId>*</artifactId>
-          <groupId>*</groupId>
-        </exclusion>
-      </exclusions>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.14.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.comphenix.protocol</groupId>
+      <artifactId>ProtocolLib</artifactId>
+      <version>5.2.0-SNAPSHOT</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
@@ -62,54 +62,23 @@
     <finalName>${project.name}</finalName>
     <plugins>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-shade-plugin</artifactId>
-        <version>3.2.4</version>
-        <configuration>
-          <filters>
-            <filter>
-              <artifact>de.craftlancer:clcore</artifact>
-              <includes>
-                <include>de/craftlancer/core/command/*</include>
-                <include>de/craftlancer/core/util/*</include>
-                <include>de/craftlancer/core/LambdaRunnable*</include>
-                <include>de/craftlancer/core/Utils*</include>
-                <include>de/craftlancer/core/SemanticVersion*</include>
-              </includes>
-            </filter>
-          </filters>
-          <artifactSet>
-            <includes>
-              <include>de.craftlancer:clcore</include>
-            </includes>
-          </artifactSet>
-          <relocations>
-            <relocation>
-              <pattern>de.craftlancer.core</pattern>
-              <shadedPattern>net.craftcitizen.imagemaps.clcore</shadedPattern>
-            </relocation>
-          </relocations>
-        </configuration>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>shade</goal>
-            </goals>
-          </execution>
-        </executions>
+        <groupId>ca.bkaw</groupId>
+        <artifactId>paper-nms-maven-plugin</artifactId>
+        <version>1.4.4</version>
       </plugin>
-
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.4.1</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+            <archive>
+                <manifestEntries>
+                    <paperweight-mappings-namespace>mojang</paperweight-mappings-namespace>
+                    <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                </manifestEntries>
+            </archive>
         </configuration>
-      </plugin>
-
+    </plugin>
     </plugins>
   </build>
 </project>
